--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+backtrace-on-stack-overflow = "0.3.0"
 clap = { version = "4.5.17", features = ["derive"] }
 inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-static"] }
 strum = { version = "0.26.3", features = ["derive"] }
