--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,17 @@ on:
 jobs:
   check-rustdoc-links:
     name: Check intra-doc links
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
       - uses: hecrj/setup-rust-action@v1
         with:
           rust-version: nightly
+      - run: sudo apt install llvm-18-dev
       - run: cargo rustdoc --all-features -- -D warnings
   clippy:
     name: Lint with Clippy
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       RUSTFLAGS: -Dwarnings
     steps:
@@ -26,11 +27,12 @@ jobs:
       - uses: hecrj/setup-rust-action@v1
         with:
           components: clippy
+      - run: sudo apt install llvm-18-dev
       - run: cargo clippy --workspace --all-targets --verbose --no-default-features
       - run: cargo clippy --workspace --all-targets --verbose --all-features
   rustfmt:
     name: Verify code formatting
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v2
       - uses: hecrj/setup-rust-action@v1
@@ -39,7 +41,7 @@ jobs:
       - run: cargo fmt --all -- --check
   test-versions:
     name: Test Rust ${{ matrix.rust }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
@@ -49,5 +51,6 @@ jobs:
       - uses: hecrj/setup-rust-action@v1
         with:
           rust-version: ${{ matrix.rust }}
+      - run: sudo apt install llvm-18-dev libpolly-18-dev
       - run: cargo test --verbose --workspace --all-features
       - run: cargo test --verbose --workspace --no-default-features
