--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 backtrace-on-stack-overflow = "0.3.0"
 clap = { version = "4.5.17", features = ["derive"] }
 inkwell = { version = "0.5.0", features = ["llvm18-0-prefer-static"] }
+string-interner = "0.17.0"
 strum = { version = "0.26.3", features = ["derive"] }
